--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Virtual Keyboard</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
