--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <script src="./dist/script.js"></script>
+        <script src="./src/main.js" type="module"></script>
     </body>
 </html>
